--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "commander": "^14.0.2",
     "glob": "^13.0.0",
+    "pathe": "^2.0.3",
     "ts-morph": "^27.0.2"
   },
   "devDependencies": {
